--- a/srfi-83.html
+++ b/srfi-83.html
@@ -45,17 +45,17 @@ Matthew Flatt and Kent Dybvig
 
 This SRFI is currently in ``withdrawn'' status. To see an explanation of each
 status that a SRFI can hold, see
-<a HREF="http://srfi.schemers.org/srfi-process.html">here</a>.
+<a HREF="https://srfi.schemers.org/srfi-process.html">here</a>.
 It will remain in draft status until 2006-04-02, or as amended. To
 export input on this SRFI, please <CODE>
 <a HREF="mailto:srfi minus 83 at srfi dot schemers dot org">mailto:srfi minus 83 at srfi dot schemers dot org</a></CODE>.
-See <a HREF="http://srfi.schemers.org/srfi-list-subscribe.html">instructions
+See <a HREF="https://srfi.schemers.org/srfi-list-subscribe.html">instructions
 here</a> to subscribe to the list. You can access previous messages via
-<a HREF="http://srfi.schemers.org/srfi-83/mail-archive/maillist.html">the
+<a HREF="https://srfi.schemers.org/srfi-83/mail-archive/maillist.html">the
 archive of the mailing list</a>.
 <p>
 <ul>
-  <li>Received: <a href="http://srfi.schemers.org/srfi-83/srfi-83-1.1.html">2005-10-31</a></li>
+  <li>Received: <a href="https://srfi.schemers.org/srfi-83/srfi-83-1.1.html">2005-10-31</a></li>
   <li>Draft: 2005-11-30--2006-01-29</li>
   <li>Draft extended: 2006-02-01--2006-04-02</li>
   <li>Withdrawn: 2006-09-13</li>
