--- a/srfi-83.html
+++ b/srfi-83.html
@@ -17,6 +17,13 @@ Matthew Flatt and Kent Dybvig
 
 <h1>Status</h1>
 
+<p>This SRFI is currently in <em>withdrawn</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+83  +at+srfi+dotschemers+dot+org">srfi-83  @<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-83  ">archive</a>.</p>
+<ul>
+  <li>Received: <a href="https://srfi.schemers.org/srfi-83/srfi-83-1.1.html">2005-10-31</a></li>
+  <li>Draft: 2005-11-30--2006-01-29</li>
+  <li>Draft extended: 2006-02-01--2006-04-02</li>
+  <li>Withdrawn: 2006-09-13</li>
+</ul>
 
 <blockquote style="background-color: #e8e8e8;">
 <p>
@@ -42,24 +49,6 @@ Matthew Flatt and Kent Dybvig
    SRFIs.
 </p>
 </blockquote>
-
-This SRFI is currently in ``withdrawn'' status. To see an explanation of each
-status that a SRFI can hold, see
-<a HREF="https://srfi.schemers.org/srfi-process.html">here</a>.
-It will remain in draft status until 2006-04-02, or as amended. To
-export input on this SRFI, please <CODE>
-<a HREF="mailto:srfi minus 83 at srfi dot schemers dot org">mailto:srfi minus 83 at srfi dot schemers dot org</a></CODE>.
-See <a HREF="https://srfi.schemers.org/srfi-list-subscribe.html">instructions
-here</a> to subscribe to the list. You can access previous messages via
-<a HREF="https://srfi.schemers.org/srfi-83/mail-archive/maillist.html">the
-archive of the mailing list</a>.
-<p>
-<ul>
-  <li>Received: <a href="https://srfi.schemers.org/srfi-83/srfi-83-1.1.html">2005-10-31</a></li>
-  <li>Draft: 2005-11-30--2006-01-29</li>
-  <li>Draft extended: 2006-02-01--2006-04-02</li>
-  <li>Withdrawn: 2006-09-13</li>
-</ul>
 
 <!-- ABSTRACT -->
 
