--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p class="authors">by Matthew Flatt and Kent Dybvig</p>
     <p class="based-on"></p>
     <p class="status">status: <em>withdrawn</em> (2006-09-13)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=modules][Modules]], [[https://srfi.schemers.org/?keywords=r6rs-process][R6RS process]]</p>
 
     <ul class="info">
       <li><a href="srfi-83.html">The SRFI Document</a></li>
